welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: type mismatch;
 found   : Int
 required: Int.type
  e1=math.abs(a-10)
             ^close10:5: error: type mismatch;
 found   : Int
 required: Int.type
  e2=math.abs(b-10)
             ^close10:6: error: value > is not a member of object Int
  if (e1>e2) {
        ^close10:7: error: type mismatch;
 found   : Int.type
 required: Int
    return e2
           ^close10:8: error: value > is not a member of object Int
  } else if (e2>e1) {
               ^close10:9: error: type mismatch;
 found   : Int.type
 required: Int
    return e1
           ^close10:10: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (e1=e2){
               ^